--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div id="map" style="width:100%;height:100vh;"></div>
 
-    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=6cec7b33219ccc7588f29d68c32e67bf"></script>
+    <script
+        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=6cec7b33219ccc7588f29d68c32e67bf&libraries=clusterer"></script>
     <script src="index.js"></script>
 </body>
 
