--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     <script
         src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=6cec7b33219ccc7588f29d68c32e67bf&libraries=clusterer"></script>
+
+    <script src="churchlist.js"></script>
     <script src="index.js"></script>
+
 </body>
 
 </html>
