--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="index.css">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -18,8 +20,8 @@
 
 <body>
     <nav class="navbar fixed-top navbar-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">분당우리교회 일만성도파송운동</a>
+        <div class="container-fluid navbar-brand">
+            분당우리교회 일만성도파송운동
         </div>
     </nav>
 
