--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 <body>
     <nav class="navbar fixed-top navbar-light">
-        <div class="container-fluid navbar-brand">
-            분당우리교회 일만성도파송운동
+        <div class="container-fluid navbar-brand" style="color: #2a5e41;">
+            일만성도파송운동<img src="static/img/logo.gif">
         </div>
     </nav>
 
