마커 스프라이트 이미지 아이콘 사용하기

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <div id="map" style="width:100%;height:100vh;"></div>
 
+    <script src="churchlist.js"></script>
     <script src="index.js"></script>
 
     <!-- Bootstrap Bundle with Popper -->
