검색 기능 개발중

--- a/kakao/search/index.html
+++ b/kakao/search/index.html
@@ -6,8 +6,6 @@
     <title>다음 지도 API</title>
     <link rel="stylesheet" href="index.css">
 
-    <script type="text/javascript"
-        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6cec7b33219ccc7588f29d68c32e67bf&libraries=services"></script>
 </head>
 
 <body>
@@ -29,8 +27,8 @@
         </div>
     </div>
 
-    <!-- <script
-        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=6cec7b33219ccc7588f29d68c32e67bf&libraries=clusterer"></script> -->
+    <script
+        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=6cec7b33219ccc7588f29d68c32e67bf&libraries=clusterer"></script>
 
 
     <script src="index.js"></script>
