--- a/index.html
+++ b/index.html
@@ -1,51 +1,12 @@
-<!doctype html>
-<html lang="ko">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="search/search.css">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
-    <title>분당우리교회 일만성도파송운동</title>
-
-    <script type="text/javascript"
-        src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=621nlgfqwf"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-    <nav class="navbar fixed-top navbar-light">
-        <div class="container-fluid navbar-brand" style="color: #2a5e41;">
-            일만성도파송운동<img src="static/img/logo.gif">
-        </div>
-    </nav>
-
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
-    </div>
-
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
-
-
-    <div id="search"></div>
-
-    <div id="map" style="width:100%;height:100vh;"></div>
-
-    <script src="data/churchlist.js"></script>
-    <script src="index.js"></script>
-    <script src="search/search.js"></script>
-
-
+    
 </body>
-
 </html>
