--- a/index.html
+++ b/index.html
@@ -32,16 +32,13 @@
     </nav>
 
     <!-- 본문 -->
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-sm">
-                One of three columns
+            <div class="col-md-3 border">
+                Search
             </div>
-            <div class="col-sm">
-                One of three columns
-            </div>
-            <div class="col-sm">
-                One of three columns
+            <div class="col-md">
+                Map
             </div>
         </div>
     </div>
