--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </div>
 
     <!-- Javascript -->
+    <script src="search/search.js"></script>
     <script src="data/churchlist.js"></script>
     <script src="map/map.js"></script>
 
