--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
     <!-- 헤더 -->
     <nav class="navbar navbar-expand navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">사각사각 지도</a>
+            <a class="navbar-brand" id="title" href="#">사각사각 지도</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
                 aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarsExample02">
+            <!-- <div class="collapse navbar-collapse" id="navbarsExample02">
                 <form>
                     <input class="form-control" type="text" placeholder="Search" aria-label="Search">
                 </form>
-            </div>
+            </div> -->
         </div>
     </nav>
 
@@ -50,6 +50,7 @@
     </div>
 
     <!-- Javascript -->
+    <script src="index.js"></script>
     <script src="search/search.js"></script>
     <script src="data/churchlist.js"></script>
     <script src="map/map.js"></script>
