--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3 border">
-                Search
+                <div id=search></div>
             </div>
             <div class="col-md">
-                <div id="map" style="width:100%;height:100vh;"></div>
+                <div id="map" style="width:100%;height:90vh;"></div>
             </div>
         </div>
     </div>
