--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3 border">
-                <div id=search></div>
+                <div id="search"></div>
             </div>
             <div class="col-md">
                 <div id="map" style="width:100%;height:90vh;"></div>
