--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- 헤더 -->
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <nav class="navbar navbar-expand navbar-dark bg-success">
         <div class="container-fluid">
             <a class="navbar-brand" id="title" href="#">사각사각 지도</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
@@ -45,6 +45,7 @@
             </div>
             <div class="col-md">
                 <div id="map" style="width:100%;height:90vh;"></div>
+                <!-- <div id="map" style="width:100%;height:100%;"></div> -->
             </div>
         </div>
     </div>
