--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- 본문 -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3 border">
+            <div class="col-md-2">
                 <div id="search"></div>
             </div>
             <div class="col-md">
