--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2">
+                <form class="form-inline">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+                
                 <div id="search"></div>
             </div>
             <div class="col-md">
