--- a/index.html
+++ b/index.html
@@ -42,11 +42,8 @@
         <div class="row">
             <div class="col-md-2">
                 <div class="input-group rounded">
-                    <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+                    <input type="search" class="form-control rounded" placeholder="교회 찾기" aria-label="Search"
                         aria-describedby="search-addon" />
-                    <span class="input-group-text border-0" id="search-addon">
-                        <i class="fas fa-search"></i>
-                    </span>
                 </div>
 
                 <div id="search"></div>
