--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <div id="search"></div>
             </div>
-            <div class="col-md">
+            <div class="col-md" style="margin:0; padding:0;">
                 <div id="map" style="width:100%;height:90vh;"></div>
                 <!-- <div id="map" style="width:100%;height:100%;"></div> -->
             </div>
