--- a/index.html
+++ b/index.html
@@ -40,17 +40,18 @@
     <!-- 본문 -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-2">
-                <div class="input-group rounded">
+            <div class="col-md-3">
+                <div class="input-group mt-2 mb-2">
                     <input type="search" class="form-control rounded" placeholder="교회 찾기" aria-label="Search"
                         aria-describedby="search-addon" />
                 </div>
+                <div class="list-group">
+                    <div id="church-list"></div>
+                </div>
 
-                <div id="search"></div>
             </div>
             <div class="col-md" style="margin:0; padding:0;">
                 <div id="map" style="width:100%;height:90vh;"></div>
-                <!-- <div id="map" style="width:100%;height:100%;"></div> -->
             </div>
         </div>
     </div>
