--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>사각사각 지도</title>
+    <title>분당우리교회 일만성도파송운동</title>
 
     <!-- 지도 -->
     <script type="text/javascript"
@@ -23,7 +23,7 @@
     <!-- 헤더 -->
     <nav class="navbar navbar-expand navbar-dark bg-success">
         <div class="container-fluid">
-            <a class="navbar-brand" id="title" href="#">사각사각 지도</a>
+            <a class="navbar-brand" href="#">분당우리교회 일만성도파송운동</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
                 aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
