--- a/index.html
+++ b/index.html
@@ -20,27 +20,13 @@
 </head>
 
 <body>
-    <!-- 헤더 -->
-    <nav class="navbar navbar-expand navbar-dark bg-success">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">분당우리교회 일만성도파송운동</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
-                aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- <div class="collapse navbar-collapse" id="navbarsExample02">
-                <form>
-                    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-                </form>
-            </div> -->
-        </div>
-    </nav>
-
-    <!-- 본문 -->
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
+                <div class="navbar navbar-dark bg-success container-fluid">
+                    <a class="navbar-brand" href="#">분당우리교회 일만성도파송운동</a>
+                </div>
+
                 <div class="input-group mt-2 mb-2">
                     <input type="search" class="form-control rounded" placeholder="교회 찾기" aria-label="Search"
                         aria-describedby="search-addon" />
@@ -51,7 +37,7 @@
 
             </div>
             <div class="col-md" style="margin:0; padding:0;">
-                <div id="map" style="width:100%;height:90vh;"></div>
+                <div id="map" style="width:100%;height:100%;"></div>
             </div>
         </div>
     </div>
