--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3" style="padding: 0">
                 <div class="navbar navbar-dark bg-success container-fluid">
                     <a class="navbar-brand" href="#">분당우리교회 일만성도파송운동</a>
                 </div>
-
-                <div class="input-group mt-2 mb-2">
-                    <input type="search" class="form-control rounded" placeholder="교회 찾기" aria-label="Search"
-                        aria-describedby="search-addon" />
+                <div class="px-2">
+                    <div class="input-group mt-2 mb-2">
+                        <input type="search" class="form-control rounded" placeholder="교회 찾기" aria-label="Search"
+                            aria-describedby="search-addon" />
+                    </div>
+                    <div class="list-group overflow-auto" style="height: calc(100vh - 7rem)">
+                        <div id="church-list"></div>
+                    </div>
                 </div>
-                <div class="list-group">
-                    <div id="church-list"></div>
-                </div>
-
             </div>
             <div class="col-md" style="margin:0; padding:0;">
                 <div id="map" style="width:100%;height:100%;"></div>
