--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 </div>
                 <div class="px-2">
                     <div class="input-group mt-2 mb-2">
-                        <input type="search" class="form-control rounded" placeholder="교회 찾기" aria-label="Search"
-                            aria-describedby="search-addon" />
+                        <input class="form-control" id="ibx_searchChurch" placeholder="교회 찾기" />
                     </div>
                     <div class="list-group overflow-auto" style="height: calc(100vh - 7rem)">
                         <div id="church-list"></div>
