--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
     </div>
 
     <!-- Javascript -->
+    <script>
+        var map = new naver.maps.Map('map', {
+            center: new naver.maps.LatLng(37.39234762613166, 127.13087848124754),
+            zoom: 11
+        });
+    </script>
+
     <script src="data/churchlist.js"></script>
     <script src="index.js"></script>
     <script src="search/search.js"></script>
