--- a/index_mobile.html
+++ b/index_mobile.html
@@ -21,12 +21,12 @@
 
 <body>
     <header>
-        <div class="collapse bg-dark" id="navbarHeader">
+        <div class="collapse bg-success" id="navbarHeader">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-7 py-4">
-                        <h4 class="text-white">About</h4>
-                        <p class="text-muted">Add some information about the album below, the author, or any other
+                        <h4 class="text-white">교회찾기</h4>
+                        <p class="text-white">Add some information about the album below, the author, or any other
                             background context. Make it a few sentences long so folks can pick up some informative
                             tidbits. Then, link them off to some social networking sites or contact information.</p>
                     </div>
@@ -41,34 +41,38 @@
                 </div>
             </div>
         </div>
-        <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="navbar navbar-dark bg-success shadow-sm">
             <div class="container">
                 <a href="#" class="navbar-brand d-flex align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
-                        viewBox="0 0 24 24">
-                        <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
-                        <circle cx="12" cy="13" r="4" />
-                    </svg>
                     <strong>일만성도파송운동</strong>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
                     aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-search"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                    </svg>
                 </button>
             </div>
         </div>
     </header>
-    
-    <main>
 
+    <main>
+        <div id="map" style="width:100%;height: calc(100vh - 3.5rem)"></div>
     </main>
 
     <!-- Javascript -->
+    <script>
+        var map = new naver.maps.Map('map', {
+            center: new naver.maps.LatLng(37.39234762613166, 127.13087848124754),
+            zoom: 13
+        });
+    </script>
+
     <script src="data/churchlist.js"></script>
     <script src="index.js"></script>
-    <!-- <script src="search/search.js"></script> -->
-    <!-- <script src="map/map.js"></script> -->
+    <script src="map/map.js"></script>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
