--- a/index_mobile.html
+++ b/index_mobile.html
@@ -26,18 +26,18 @@
                 <div class="row">
                     <div class="col-sm-8 col-md-7 py-4">
                         <h4 class="text-white">교회찾기</h4>
-                        <p class="text-white">Add some information about the album below, the author, or any other
-                            background context. Make it a few sentences long so folks can pick up some informative
-                            tidbits. Then, link them off to some social networking sites or contact information.</p>
+                        <input class="form-control" id="ibx_searchChurch" />
                     </div>
-                    <div class="col-sm-4 offset-md-1 py-4">
-                        <h4 class="text-white">Contact</h4>
+                    <div class="overflow-auto" style="height: 300px">
+                        <div id="church-list"></div>
+                    </div>
+                    <!-- <div class="col-sm-4 offset-md-1 py-4">
                         <ul class="list-unstyled">
                             <li><a href="#" class="text-white">Follow on Twitter</a></li>
                             <li><a href="#" class="text-white">Like on Facebook</a></li>
                             <li><a href="#" class="text-white">Email me</a></li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -72,6 +72,7 @@
 
     <script src="data/churchlist.js"></script>
     <script src="index.js"></script>
+    <script src="search/search_m.js"></script>
     <script src="map/map.js"></script>
 
     <!-- Bootstrap Bundle with Popper -->
