--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 
     <link rel="stylesheet" href="map/map.css">
 
+
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="search/search.css">
+
 
     <title>분당우리교회 일만성도파송운동</title>
 
@@ -55,10 +58,7 @@
     <script src="map/map.js"></script>
 
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
-
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <script type="text/javascript">
         if (screen.width <= 767) {
