--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <!-- 지도 -->
     <script type="text/javascript"
         src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=621nlgfqwf"></script>
+
+    <!-- Google Adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8362228066874729"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -27,7 +31,7 @@
         <div class="row">
             <div class="col-md-3" style="padding: 0">
                 <div class="navbar navbar-dark bg-success container-fluid">
-                    <a class="navbar-brand" href="#">분당우리교회 일만성도파송운동</a>
+                    <a class="navbar-brand" href="index.html">분당우리교회 일만성도파송운동</a>
                 </div>
                 <div class="px-2">
                     <div class="input-group mt-2 mb-2">
