--- a/index_mobile.html
+++ b/index_mobile.html
@@ -18,7 +18,10 @@
     <!-- 지도 -->
     <script type="text/javascript"
         src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=621nlgfqwf"></script>
-</head>
+
+    <!-- Google Adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8362228066874729"
+        crossorigin="anonymous"></script>
 
 <body>
     <header>
@@ -37,7 +40,7 @@
         </div>
         <div class="navbar navbar-dark bg-success shadow-sm">
             <div class="container">
-                <a href="#" class="navbar-brand d-flex align-items-center">
+                <a href="index_mobile.html" class="navbar-brand d-flex align-items-center">
                     <strong>일만성도파송운동</strong>
                 </a>
                 <button class="navbar-toggler" id="btn_mobileSearchHamburger" type="button" data-bs-toggle="collapse"
