--- a/index.html
+++ b/index.html
@@ -37,10 +37,21 @@
                     <div class="input-group mt-2 mb-2">
                         <input class="form-control" id="ibx_searchChurch" placeholder="교회 찾기" />
                     </div>
-                    <div class="list-group overflow-auto" style="height: calc(100vh - 7rem)">
+                    <!-- <div class="list-group overflow-auto" style="height: calc(100vh - 7rem)"> -->
+                    <div class="list-group overflow-auto" style="height: calc(100vh - 10.4rem)">
                         <div id="church-list"></div>
                     </div>
                 </div>
+                <footer class="footer mt-auto py-2 bg-light">
+                    <div class="container">
+                        <ul class="nav justify-content-center">
+                            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+                        </ul>
+                    </div>
+
+                </footer>
             </div>
             <div class="col-md" style="margin:0; padding:0;">
                 <div id="map" style="width:100%;height:100%;"></div>
