--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <footer class="footer mt-auto py-2 bg-light">
                     <div class="container">
                         <ul class="nav justify-content-center">
-                            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+                            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
                             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">개인정보보호</a></li>
                         </ul>
                     </div>
 
@@ -55,6 +55,58 @@
             </div>
             <div class="col-md" style="margin:0; padding:0;">
                 <div id="map" style="width:100%;height:100%;"></div>
+            </div>
+
+
+        </div>
+    </div>
+
+    <!-- 오답 팝업 -->
+    <div class="modal fade" id="wrongModal" tabindex="-1" role="dialog" aria-labelledby="answerModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="answerModalLabel">오답입니다.</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <h6>정답:</h6>
+                    <p id="quest-answer"></p>
+                    <h6 id="explanation-title">설명:</h6>
+                    <p id="explanation"></p>
+
+                    <!-- 추가설명 -->
+                    <div id="additional-explanation"></div>
+
+                    <!-- 설명추가 -->
+                    <button type="button" class="btn btn-link add-explanation-txt">설명추가</button>
+                    <br>
+                    <form class="add-explanation-form" style="display:none;">
+                        <div class="form-group">
+                            <label for="addExplanationUserName">이름</label>
+                            <input type="text" class="form-control" id="addExplanationUserName" placeholder="익명">
+                        </div>
+                        <div class="form-group">
+                            <label for="addExplanationContents">설명</label>
+                            <textarea class="form-control" id="addExplanationContents" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-sm">추가</button>
+                    </form>
+                    <br>
+
+                    <h6 id="reference-title">참조:</h6><a id="reference" target="_blank"></a>
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                        id="btn-close-modal">닫기</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"
+                        id="btn-next-question">다음</button>
+                </div>
             </div>
         </div>
     </div>
@@ -71,6 +123,8 @@
     <script src="index.js"></script>
     <script src="search/search.js"></script>
     <script src="map/map.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
