--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">About </h5>
+                    <h5 class="modal-title">About 일만성도파송운동</h5>
                     <span type="button" onclick="closeAboutModal();">&times;</span>
                 </div>
                 <div class="modal-body">
